--- a/LostAndFound/LostAndFound/MainWindow.xaml
+++ b/LostAndFound/LostAndFound/MainWindow.xaml
@@ -3,6 +3,16 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <TabControl>
+            <TabItem Header="ReportFound">
+                The Cheese Tab
+            </TabItem>
+            <TabItem Header="SearchForLostItem">
+                The Pepperoni Tab
+            </TabItem>
+            <TabItem Header="ViewExpiredItems">
+                The Mushrooms Tab
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
