--- a/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
+++ b/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:LostAndFound.Views.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300" >
 
@@ -21,6 +22,9 @@
             </ComboBox>
             
             <!-- TODO: Below the combobox (whatever), we should add the expired tags UserControl. -->
+            <local:ExpiredTagListUserControl Margin="0,10,0,0" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+
+            </local:ExpiredTagListUserControl>
             
         </StackPanel>
         
