--- a/LostAndFound/LostAndFound/Views/Controls/LostItemReportUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemReportUserControl.xaml
@@ -4,9 +4,24 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300">
+      d:DesignHeight="300" d:DesignWidth="200">
 
     <Grid>
-        
+        <StackPanel>
+            <ListView Height="260" />
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
+                <Button Height="25" Grid.Column="0">
+                    <TextBlock Text="Notify All"/>
+                </Button>
+                <Button Padding="0,10,0,10" Grid.Column="2">
+                    <TextBlock Text="Print Ticket"/>
+                </Button>
+            </Grid>
+        </StackPanel>
     </Grid>
 </UserControl>
