--- a/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
+++ b/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:LostAndFound.Views.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300" >
 
@@ -26,6 +27,7 @@
         
         <StackPanel Orientation="Vertical">
             <!-- TODO: Add "Multiple items selected" UserControl -->
+           <!-- <local:ExpiredItemActionUserControl/>-->
         </StackPanel>
     </Grid>
 </UserControl>
