--- a/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
+++ b/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:LostAndFound.Views.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300">
 
@@ -23,6 +24,7 @@
                 <ComboBoxItem Name="cbi3">Item3</ComboBoxItem>
             </ComboBox>
             <CheckBox>Show disposed</CheckBox>
+            <local:LostItemDetailsUserControl></local:LostItemDetailsUserControl>
         </StackPanel>
         <StackPanel Grid.Column="2" Orientation="Vertical" Margin="25,25,35,25" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <!--TODO: Add Command={Binding FileAsLostCommand}-->
