--- a/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
@@ -4,23 +4,34 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
       d:DesignHeight="200" d:DesignWidth="200">
-    
+
 
     <Grid>
-        <StackPanel Orientation="Vertical" Grid.Column="0">
-           <!-- <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
-           StringFormat='{}{0:dddd, MMMM dd, yyyy}'}" HorizontalAlignment="Right"/> -->
-            <TextBlock Text="Item 2"/>
-            <TextBlock Text="Tag 1"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <TextBlock Text="Item 2" Grid.Row="0"/>
+        <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
+           StringFormat='{}{0:MM/ddyy}'}" HorizontalAlignment="Right" Grid.Row="0"/>
+
+        <TextBlock Text="Tag 1" Grid.Row="1"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="2">
             <TextBlock Text="Found at: " />
             <TextBox Width="50" HorizontalAlignment="Left"/>
-
-            <Button Padding="15,8,15,8" HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                <TextBlock Text="Claim"/>
-            </Button>
         </StackPanel>
-        
+        <Button Padding="8,8,8,8" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="3">
+            <TextBlock Text="Claim"/>
+        </Button>
+
 
     </Grid>
 </UserControl>
