Changed FileAsLost, ReportsTab, ClaimItemWindow
Format Changes to LostItemDetailsUserControl
Created FileAsLost
Made tab ReportsTab
Format ClaimItemWindow
Added Reports tab to main window

--- a/LostAndFound/LostAndFound/MainWindow.xaml
+++ b/LostAndFound/LostAndFound/MainWindow.xaml
@@ -5,13 +5,16 @@
         Title="MainWindow" Height="550" Width="825">
     <Grid>
         <TabControl>
-            <TabItem Header="ReportFound">
-                <views:ReportFoundView />
-            </TabItem>
-            <TabItem Header="SearchForLostItem">
+            <TabItem Header="Search For Lost Item">
                 <views:SearchForLostItemView />
             </TabItem>
-            <TabItem Header="ViewExpiredItems">
+            <TabItem Header="Report Found">
+                <views:ReportFoundView />
+            </TabItem>
+            <TabItem Header="Reports">
+                <views:ExpiredItemsView />
+            </TabItem>
+            <TabItem Header="View Expired Items">
                 <views:ExpiredItemsView />
             </TabItem>
         </TabControl>
