--- a/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
@@ -19,16 +19,16 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Item 2" Grid.Row="0"/>
+        <TextBlock Text="Item 2" Grid.Row="0" Margin="5"/>
         <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
-           StringFormat='{}{0:MM/ddyy}'}" HorizontalAlignment="Right" Grid.Row="0"/>
+           StringFormat='{}{0:MM/dd/yy}'}" HorizontalAlignment="Right" Grid.Row="0" Margin="5"/>
 
-        <TextBlock Text="Tag 1" Grid.Row="1"/>
-        <StackPanel Orientation="Horizontal" Grid.Row="2">
+        <TextBlock Text="Tag 1" Grid.Row="1" Margin="5"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5">
             <TextBlock Text="Found at: " />
             <TextBox Width="50" HorizontalAlignment="Left"/>
         </StackPanel>
-        <Button Padding="8,8,8,8" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="3">
+        <Button Padding="8,8,8,8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="3" Margin="5">
             <TextBlock Text="Claim"/>
         </Button>
 
