--- a/LostAndFound/LostAndFound/Views/Windows/ClaimItemWindow.xaml
+++ b/LostAndFound/LostAndFound/Views/Windows/ClaimItemWindow.xaml
@@ -10,18 +10,29 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="Please verify..." Grid.Row="0" FontSize="14" Margin="0,0,0,10" />
+        <TextBlock Text="Please verify:" Grid.Row="0" FontSize="14" Margin="0,0,0,10" />
 
         <StackPanel Orientation="Vertical" Grid.Row="1">
             <StackPanel Orientation="Horizontal">
-                <TextBox Text="First name..." Width="100" Margin="0,0,25,0"/>
-                <TextBox Text="Last name..." Width="100"/>
+                <TextBlock Text="First Name" Width="100" Margin="0,0,25,0"/>
+                <TextBlock Text="Last Name" Width="100"/>
             </StackPanel>
-            <TextBox Text="Email..." Width="100" Margin="0,10,0,0" HorizontalAlignment="Left"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBox Width="100" Margin="0,0,25,0"/>
+                <TextBox Width="100"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="Email" Width="100" Margin="0,15,25,0"/>
+                <TextBlock Text="Phone Number" Width="100" Margin="0,15,25,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <TextBox Width="100" Margin="0,0,25,20"/>
+                <TextBox Width="100" Margin="0,0,25,20"/>
+            </StackPanel>
         </StackPanel>
-        
+
         <CheckBox Grid.Row="2"> <!-- TODO: Get this to overflow nicely, not run off the edge of the window. -->
-            <Run Text="I verify that I have confirmed the identity of this individual." />
+            <TextBlock TextWrapping="Wrap" Text="I verify that I have confirmed the identity of this individual." />
         </CheckBox>
 
     </Grid>
