Few small changes

--- a/LostAndFound/LostAndFound/Views/ReportFoundView.xaml
+++ b/LostAndFound/LostAndFound/Views/ReportFoundView.xaml
@@ -13,16 +13,20 @@
     </UserControl.DataContext>
     <Grid Margin="10,10,10,10">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical" Grid.Column="0">
-            <TextBlock Text="Add Description Tags" />
-            <TextBox Width="150" />
+            <TextBlock Text="Item Description" Padding="5,0,0,0"/>
+            <TextBox Width="140" />
             
-            <TextBlock Text="Add Location Tags" Padding="0,15,0,0"/>
-            <TextBox Width="150" />
+            <TextBlock Text="Found Location" Padding="5,15,0,0"/>
+            <TextBox Width="140"/>
+
+
+            <TextBlock Text="Storage Location" Padding="5,15,0,0"/>
+            <TextBox Width="140"/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1">
             <!-- TODO: Add tag stuff here. -->
