--- a/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
@@ -16,19 +16,20 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
-        <TextBlock Text="Item 2" Grid.Row="0" Margin="5"/>
+        <TextBlock Text="Selected Item Description" Grid.Row="0" Margin="4" HorizontalAlignment="center"></TextBlock>
+        <TextBlock Text="Item 2" Grid.Row="1" Margin="4"/>
         <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
-           StringFormat='{}{0:MM/dd/yy}'}" HorizontalAlignment="Right" Grid.Row="0" Margin="5"/>
+           StringFormat='{}{0:MM/dd/yy}'}" HorizontalAlignment="Right" Grid.Row="1" Margin="4"/>
 
-        <TextBlock Text="Tag 1" Grid.Row="1" Margin="5"/>
-        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="5">
+        <TextBlock Text="Tag 1" Grid.Row="2" Margin="4"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="5">
             <TextBlock Text="Found at: " />
-            <TextBox Width="50" HorizontalAlignment="Left"/>
+            <TextBox Width="100" HorizontalAlignment="Left"/>
         </StackPanel>
-        <Button Padding="8,8,8,8" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="3" Margin="5">
+        <Button Padding="8,2,8,2" HorizontalAlignment="Center" VerticalAlignment="Bottom" Grid.Row="4" Margin="5">
             <TextBlock Text="Claim"/>
         </Button>
 
