Revert "messing around"
This reverts commit fa305138911ae5c0cfccedc352561804530b8f07.

--- a/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
+++ b/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
@@ -15,7 +15,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="25,25,25,25">
             <TextBox />
-            <ListView Name="LV"/>
+            <ListView/>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Margin="25,25,25,25">
             <ComboBox Text="Category">
