--- a/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
+++ b/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
@@ -7,6 +7,21 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300">
 
+    <UserControl.Resources>
+        <Style x:Key="ButtonStyle" TargetType="Button">            
+            <Setter Property="BorderThickness" Value="2" />            
+            <Setter Property="Template">
+              <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="ButtonBorder" Width="100" Height="40" CornerRadius="10" BorderThickness="1" BorderBrush="Gray" Background="LightGray" >
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+            </Setter.Value>  
+            </Setter>        
+        </Style>
+    </UserControl.Resources>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300" />
@@ -28,9 +43,11 @@
         </StackPanel>
         <StackPanel Grid.Column="2" Orientation="Vertical" Margin="25,25,35,25" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <!--TODO: Add Command={Binding FileAsLostCommand}-->
-            <Button Padding="25,10,25,10">
-                <TextBlock Text="File as Lost"/>
-            </Button>
+            
+                <Button Padding="25,10,25,10" Style="{StaticResource ButtonStyle}" >
+                    <TextBlock Text="File as Lost"/>
+                </Button>
+            
         </StackPanel>
     </Grid>
 </UserControl>
