--- a/LostAndFound/LostAndFound/Views/Controls/ExpiredItemActionUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/ExpiredItemActionUserControl.xaml
@@ -5,25 +5,39 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300">
-
+    <UserControl.Resources>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="ButtonBorder"  CornerRadius="10" BorderThickness="1" BorderBrush="Gray" Background="LightGray" >
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="30"/>
             <RowDefinition Height="20"/>
-            <RowDefinition Height="180"/>
-            <RowDefinition Height="20"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="40"/>
             
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>            
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="150"/>
         </Grid.ColumnDefinitions>        
         
-        <TextBlock Text="Items Selected:" Grid.Column="0" Grid.Row="1"/>
-        <TextBox Name="disposed" Height="20" Grid.Column="0" Grid.Row="2" />
+        <TextBlock Text="Items Selected:" Grid.Column="0"  Grid.Row="1"/>
+        <TextBox Name="disposed" Height="20" Grid.ColumnSpan="2" Grid.Column="0" Grid.Row="2" />
         <TextBlock Text="Example: DI, Surplus, etc." Grid.Column="0" Grid.Row="3"/>
-        <Button Content="Disposed Selected" Grid.Column="0" Grid.Row="5"/>
+        <Button Content="Disposed Selected" Width="120" Height="30" Grid.Column="1" Grid.Row="5" Style="{StaticResource ButtonStyle}"/>
         
        <!--<StackPanel HorizontalAlignment="Right" Width="10">
             <Button Name="exit" Background="Red" BorderThickness="1" Margin="-12,0,0,0">×</Button>-->
