--- a/LostAndFound/LostAndFound/Views/Controls/LostItemReportUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemReportUserControl.xaml
@@ -5,7 +5,20 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="200">
-
+    <UserControl.Resources>
+        <Style x:Key="ButtonStyle" TargetType="Button">
+            <Setter Property="BorderThickness" Value="2" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="ButtonBorder" CornerRadius="10" BorderThickness="1" BorderBrush="Gray" Background="LightGray" >
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <StackPanel>
             <ListView Height="260" />
@@ -15,10 +28,10 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="100"/>
                 </Grid.ColumnDefinitions>
-                <Button Height="25" Grid.Column="0">
+                <Button Height="25" Grid.Column="0" Style="{StaticResource ButtonStyle}">
                     <TextBlock Text="Notify All"/>
                 </Button>
-                <Button Padding="0,10,0,10" Grid.Column="2">
+                <Button Height="40" Padding="0,10,0,10" Grid.Column="2" Style="{StaticResource ButtonStyle}">
                     <TextBlock Text="Print Ticket"/>
                 </Button>
             </Grid>
