--- a/LostAndFound/LostAndFound/MainWindow.xaml
+++ b/LostAndFound/LostAndFound/MainWindow.xaml
@@ -1,8 +1,32 @@
-﻿<Window x:Class="LostAndFound.MainWindow"
+﻿<Controls:MetroWindow x:Class="LostAndFound.MainWindow"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:views="clr-namespace:LostAndFound.Views"
-        Title="MainWindow" Height="550" Width="825">
+        Title="SUU Lost and Found" Height="550" Width="825">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button>
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="20" Height="20"
+                   Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                        <Rectangle.OpacityMask>
+                            <VisualBrush Stretch="Uniform"  
+                         Visual="{StaticResource appbar_question}" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                </StackPanel>
+            </Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
+
     <Grid>
         <TabControl>
             <TabItem Header="Search For Lost Item">
@@ -18,10 +42,5 @@
                 <views:ExpiredItemsView />
             </TabItem>
         </TabControl>
-        <Button HorizontalAlignment="Right" VerticalAlignment="Top" Background="Transparent" BorderThickness="0" Click="clickHelp">
-            <StackPanel>
-                <Image Source="Resources/help.png" Stretch="UniformToFill" Width="20" Height="20"></Image>
-            </StackPanel>
-        </Button>
     </Grid>
-</Window>
+</Controls:MetroWindow>
