--- a/LostAndFound/LostAndFound/Views/Controls/ExpiredItemActionUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/ExpiredItemActionUserControl.xaml
@@ -1,10 +1,24 @@
 ﻿<UserControl x:Class="LostAndFound.Views.Controls.ExpiredItemActionUserControl"
+      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
+    </UserControl.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -23,7 +37,7 @@
         <TextBlock Text="Items Selected:" Grid.Column="0" Grid.Row="1"/>
         <TextBox Name="disposed" Height="20" Grid.Column="0" Grid.Row="2" />
         <TextBlock Text="Example: DI, Surplus, etc." Grid.Column="0" Grid.Row="3"/>
-        <Button Content="Disposed Selected" Grid.Column="0" Grid.Row="5"/>
+        <Button Content="Disposed Selected" Grid.Column="0" Grid.Row="5" Width="130"/>
         
        <!--<StackPanel HorizontalAlignment="Right" Width="10">
             <Button Name="exit" Background="Red" BorderThickness="1" Margin="-12,0,0,0">×</Button>-->
