--- a/LostAndFound/LostAndFound/Views/Controls/ExpiredTagListUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/ExpiredTagListUserControl.xaml
@@ -5,6 +5,20 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300">
+        
+        <UserControl.Resources>
+    <ResourceDictionary>
+    <ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+            <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+            <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+            <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
+            <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+
+        </ResourceDictionary.MergedDictionaries>
+    </ResourceDictionary>
+
+</UserControl.Resources>
     <DataGrid HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Center" Height="300" Width="300">
         <DataGrid.Columns>
             <DataGridTextColumn Header="Item" Width="70" Binding="{Binding Item}"></DataGridTextColumn>
