--- a/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
+++ b/LostAndFound/LostAndFound/Views/ExpiredItemsView.xaml
@@ -6,6 +6,19 @@
       xmlns:local="clr-namespace:LostAndFound.Views.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300" >
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
+    </UserControl.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
