--- a/LostAndFound/LostAndFound/Views/Windows/ClaimItemWindow.xaml
+++ b/LostAndFound/LostAndFound/Views/Windows/ClaimItemWindow.xaml
@@ -1,7 +1,9 @@
-﻿<Window x:Class="LostAndFound.Views.Windows.ClaimItemWindow"
+﻿<Controls:MetroWindow x:Class="LostAndFound.Views.Windows.ClaimItemWindow"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ClaimItemWindow" Height="300" Width="300">
+    
     <Grid Margin="25,25,25,25">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -36,4 +38,4 @@
         </CheckBox>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
