--- a/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
+++ b/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
@@ -39,7 +39,7 @@
         <StackPanel Grid.Column="2" Orientation="Vertical" Margin="25,25,35,25" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <!--TODO: Add Command={Binding FileAsLostCommand}-->
             
-                <Button Padding="25,10,25,10" Style="{StaticResource ButtonStyle}" >
+                <Button Padding="25,10,25,10">
                     <TextBlock Text="File as Lost"/>
                 </Button>
             
