Launch FileAsLost window on button click
Adds click listener and handler for launching the FileAsLost window.

--- a/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
+++ b/LostAndFound/LostAndFound/Views/SearchForLostItemView.xaml
@@ -38,10 +38,10 @@
         </StackPanel>
         <StackPanel Grid.Column="2" Orientation="Vertical" Margin="25,25,35,25" HorizontalAlignment="Right" VerticalAlignment="Bottom">
             <!--TODO: Add Command={Binding FileAsLostCommand}-->
-            
-                <Button Padding="25,10,25,10">
-                    <TextBlock Text="File as Lost"/>
-                </Button>
+
+            <Button Padding="25,10,25,10" Click="Button_Click">
+                <TextBlock Text="File as Lost"/>
+            </Button>
             
         </StackPanel>
     </Grid>
