--- a/LostAndFound/LostAndFound/Views/Controls/SearchForLostItemUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/SearchForLostItemUserControl.xaml
@@ -4,42 +4,34 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LostAndFound.Views.Controls"
+      xmlns:viewModels="clr-namespace:LostAndFound.ViewModels"
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300">
-
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
-
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-
-    </UserControl.Resources>
-
+      d:DesignHeight="500" d:DesignWidth="800">
+    
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="300" />
-            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="450" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="25,25,25,25">
-            <TextBox />
+            <TextBox TextChanged="TextBox_TextChanged" />
             <CheckBox Margin="0,2,0,7">Show disposed</CheckBox>
-            <ListView/>
+            <ListView x:Name="LostItemListView" Height="400" ItemsSource="{Binding LostItemList}" >
+                <ListView.View>
+                    <GridView AllowsColumnReorder="true" ColumnHeaderToolTip="Items Reported as Lost">
+                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" Width="120"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding DateReported}" Header="Date Reported" Width="110"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding PhoneNumber}" Header="Phone Number" Width="120"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Email}" Header="Email"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Margin="25,25,25,25">
             
-            <local:LostItemDetailsUserControl></local:LostItemDetailsUserControl>
-        </StackPanel>
-        <StackPanel Grid.Column="2" Orientation="Vertical" Margin="25,25,35,25" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-            <!--TODO: Add Command={Binding FileAsLostCommand}-->
+            <local:LostItemDetailsUserControl />
 
-            <Button Padding="25,10,25,10" Click="Button_Click">
+            <Button Padding="25,10,25,10" Click="Button_Click" MaxWidth="100" VerticalAlignment="Bottom" HorizontalAlignment="Right">
                 <TextBlock Text="File as Lost"/>
             </Button>
             
