--- a/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
@@ -7,7 +7,7 @@
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
       d:DesignHeight="200" d:DesignWidth="200">
 
-    <UserControl.Resources>
+        <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
@@ -33,20 +33,18 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+        
         <TextBlock Text="Selected Item Description" Grid.Row="0" Margin="4" HorizontalAlignment="center"></TextBlock>
-        <TextBlock Text="Item 2" Grid.Row="1" Margin="4"/>
+        <TextBlock x:Name="itemName" Text="test" Grid.Row="1" Margin="4"/>
         <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
-           StringFormat='{}{0:MM/dd/yy}'}" HorizontalAlignment="Right" Grid.Row="1" Margin="4"/>
+           StringFormat='{}{0:MM/dd/yy}'}" Grid.Row="2" Margin="4"/>
 
-        <TextBlock Text="Tag 1" Grid.Row="2" Margin="4"/>
         <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="5">
             <TextBlock Text="Found at: " />
             <TextBox Width="100" HorizontalAlignment="Left"/>
         </StackPanel>
 
-        <Button Padding="8,8,8,8" VerticalAlignment="Bottom" Grid.Row="4" Margin="79,0,79,63">
-
-
+        <Button Padding="8,8,8,8" VerticalAlignment="Bottom" Grid.Row="4" Margin="79,0,79,63" Click="claimClick">
             <TextBlock Text="Claim"/>
         </Button>
 
