--- a/LostAndFound/LostAndFound/Views/Controls/SearchForLostItemUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/SearchForLostItemUserControl.xaml
@@ -16,13 +16,17 @@
         <StackPanel Orientation="Vertical" Grid.Column="0" Margin="25,25,25,25">
             <TextBox TextChanged="TextBox_TextChanged" />
             <CheckBox Margin="0,2,0,7">Show disposed</CheckBox>
-            <ListView x:Name="LostItemListView" Height="400" ItemsSource="{Binding LostItemList}" >
+            <ListView x:Name="LostItemListView" Height="400" ItemsSource="{Binding LostItemList}" SelectionChanged="itemClicked">
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="IsSelected" Value="{Binding isSelected}"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
                 <ListView.View>
                     <GridView AllowsColumnReorder="true" ColumnHeaderToolTip="Items Reported as Lost">
-                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Header="Name" Width="120"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding DateReported}" Header="Date Reported" Width="110"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding PhoneNumber}" Header="Phone Number" Width="120"/>
-                        <GridViewColumn DisplayMemberBinding="{Binding Email}" Header="Email"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding desc}" Header="Description" Width="150"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding loc}" Header="Location Found" Width="150"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding date}" Header="Date Reported" Width="120"/>
                     </GridView>
                 </ListView.View>
             </ListView>
