--- a/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/LostItemDetailsUserControl.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
-      d:DesignHeight="200" d:DesignWidth="200">
+      d:DesignHeight="300" d:DesignWidth="200">
 
         <UserControl.Resources>
         <ResourceDictionary>
@@ -31,11 +31,12 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         
         <TextBlock Text="Selected Item Description" Grid.Row="0" Margin="4" HorizontalAlignment="center"></TextBlock>
-        <TextBlock x:Name="itemName" Text="test" Grid.Row="1" Margin="4"/>
+        <TextBlock x:Name="itemName" Text="" Grid.Row="1" Margin="4"/>
         <TextBlock Text="{Binding Source={x:Static sys:DateTime.Today},  
            StringFormat='{}{0:MM/dd/yy}'}" Grid.Row="2" Margin="4"/>
 
@@ -44,8 +45,12 @@
             <TextBox Width="100" HorizontalAlignment="Left"/>
         </StackPanel>
 
-        <Button Padding="8,8,8,8" VerticalAlignment="Bottom" Grid.Row="4" Margin="79,0,79,63" Click="claimClick">
+        <Button Padding="8,8,8,8" VerticalAlignment="Bottom" Grid.Row="4" Margin="79,0,79,60" Click="claimClick">
             <TextBlock Text="Claim"/>
+        </Button>
+
+        <Button Height="35" Padding="10,10,10,10" Grid.Row="5" Click="Button_Click" MaxWidth="150" VerticalAlignment="Top" HorizontalAlignment="Center">
+            <TextBlock Text="Report Found Item"/>
         </Button>
 
 
