--- a/LostAndFound/LostAndFound/Views/Controls/ReportFoundUserControl.xaml
+++ b/LostAndFound/LostAndFound/Views/Controls/ReportFoundUserControl.xaml
@@ -41,7 +41,7 @@
 
 
             <Button Margin="10" Padding="10,10,10,10" Click="Button_Click" MaxWidth="150" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-                <TextBlock Text="File as Lost"/>
+                <TextBlock Text="Report Lost Item"/>
             </Button>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1">
